--- a/Views/ExcelReader/ReadExcelFile.cshtml
+++ b/Views/ExcelReader/ReadExcelFile.cshtml
@@ -12,24 +12,24 @@
 }
 
 <script>
-
-    $(document).ready(function () {
-        $.ajax({
-            type: 'get',
-            dataType: 'json',
-            url: '../ExcelReader/AccountList',
-            async: false,
-            success: function (data) {
-                //var s = '<option value="0">--Choose Organisation--</option>';
-                $("#Organisation").empty();
-                s = "";
-                for (var i = 0; i < data.length; i++) {
-                    s += '<option value="' + data[i].accountName + '">' + data[i].accountName + '</option>';
-                }
-                $("#Organisation").append(s);
-            }
-        });
-    });
+    $("#ExcelSource").addClass("active");
+    //$(document).ready(function () {
+    //    $.ajax({
+    //        type: 'get',
+    //        dataType: 'json',
+    //        url: '../ExcelReader/AccountList',
+    //        async: false,
+    //        success: function (data) {
+    //            //var s = '<option value="0">--Choose Organisation--</option>';
+    //            $("#Organisation").empty();
+    //            s = "";
+    //            for (var i = 0; i < data.length; i++) {
+    //                s += '<option value="' + data[i].accountName + '">' + data[i].accountName + '</option>';
+    //            }
+    //            $("#Organisation").append(s);
+    //        }
+    //    });
+    //});
     
 
 
@@ -55,7 +55,7 @@
     }
 
 
-    function populateProjects() {
+    @*function populateProjects() {
         var o = document.getElementById("Organisation");
         var ORG = o.options[o.selectedIndex].text;
         if (ORG == "--Choose Organisation--") {
@@ -80,34 +80,29 @@
 
         });
 
-    }
+    }*@
 </script>
 @using (Html.BeginForm("ReadExcelFile", "ExcelReader", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <div style="margin-left:100px;margin-top:20px;">
-        <div class="form-row">
-            <label id="ex" class="btn btn-success" for="Excel">Choose Excel</label>
-            <input id="Excel" type="file" name="Excel" data-max-size="321540" accept=".xls,.xlsx" style="display:none" onchange="check()" />
-        </div>
-        <br />
-        <div class="form-row">
-            <lable>Organization:</lable>
-            <select class="form-control" id ="Organisation" onchange = "populateProjects()" name="Organisation"></select>
-            @*<lable>PAT:</lable><input id="PAT" type="text" name="PAT" onchange="check()" />*@
-        </div>
-        <br />
-        <div class="form-row">
-            @*<lable>Source Project:</lable><input id="SourceProj" type="text" name="SourceProj" onchange="check()" />*@
-            <lable> Destination Project:</lable>
-            @Html.DropDownList("DestionationProj", new SelectList(new List<SelectListItem>()), "<select>", new { @class = "form-control", id = "DestionationProj" })
 
-        </div>
-        <br />
-        <br />
-        <div>
-            <button id="submit" class="btn btn-info">Submit</button>
-        </div>
+<div style="margin-left:100px;margin-top:20px;">
+    <p class="lead">Please select excel file from which you want migrate...</p>
+    <div class="form-row">
+        <label id="ex" class="btn btn-success" for="Excel">Choose Excel</label>
+        <input id="Excel" type="file" name="Excel" data-max-size="321540" accept=".xls,.xlsx" style="display:none" onchange="check()" />
     </div>
+    <br />
+
+    <div>
+        <button id="submit" class="btn btn-info">Submit</button>
+    </div>
+    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+    {
+        <div class="col-sm-12" style="background-color:#ffaeae">
+            <span style="color:#b71616">@ViewBag.ErrorMessage</span>
+        </div>
+    }
+</div>
 
 }
 
