--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,9 +74,10 @@
         <div class="wrapper">
             <div class="sidebar">
                 <ul>
-                    <li><a href="../Welcome/Welcomepage"><i class="fas fa-home"></i>Welcome</a></li>
-                    <li><a href="#"><i class="fas fa-user"></i>Data Source</a></li>
-                    <li><a href="#"><i class="fas fa-address-card"></i>Field Mapping</a></li>
+                    <li id="welcome"><a href="../Welcome/Welcomepage"><i class="fas fa-home"></i>Welcome</a></li>
+                    <li id="ExcelSource"><a href="#"><i class="fas fa-user"></i>Data Source</a></li>
+                    <li id="Destin"><a href="#"><i class="fas fa-blog"></i>Destination</a></li>
+                    <li id="Field"><a href="#"><i class="fas fa-address-card"></i>Field Mapping</a></li>
                     @*<li><a href="#"><i class="fas fa-project-diagram"></i>Data Mapping</a></li>
                         <li><a href="#"><i class="fas fa-blog"></i>Links Mapping</a></li>
                         <li><a href="#"><i class="fas fa-address-book"></i>Miscellaneous</a></li>
