--- a/Views/Welcome/Welcomepage.cshtml
+++ b/Views/Welcome/Welcomepage.cshtml
@@ -4,6 +4,9 @@
 
 }
 
+<script>
+    $("#welcome").addClass("active");
+</script>
 <div style="margin-left:150px;">
     <div class="header"><h2>Welcome</h2></div>
     <div class="info">
